# tonic-issue-38-repro

./: Cargo.toml  README.md  environment.ini
test/: Cargo.toml  build.rs
test/src/: main.rs
