[package]
name = "om-director"
version = "0.1.0"
authors = ["Robert Bragg <robert@sixbynine.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.1.0-alpha.6", features = [ "rustls" ] }
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"] }
tokio = "=0.2.0-alpha.6"
tower = "=0.3.0-alpha.2"
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
prost-types = "0.5"

[build-dependencies]
rust-ini = "0.13"
tonic-build = { git = "https://github.com/rib/tonic", branch = "v0.1.0-alpha.6-bug-160" }
#tonic-build = "0.1.0-alpha.6"
